# Dragonslayer-Engine-2

./: .gitignore  .gitmodules  CMakeLists.txt  MovePDB.cmake  README.md
DragonslayerEngine/Engine/: CMakeLists.txt
DragonslayerEngine/Engine/include/Core/: Assert.hpp  EngineGlobals.hpp  EngineMinimal.hpp  Export.hpp  Hash.hpp  Lock.hpp  Log.hpp  Macros.hpp  Memory.hpp  NotCopyable.hpp  Platform.hpp  String.hpp  Thread.hpp  ThreadContext.hpp  Time.hpp  TypeInfo.hpp  Types.hpp  Window.hpp
DragonslayerEngine/Engine/include/Core/Allocators/: FreeListAllocator.hpp  InlineLinearAllocator.hpp  LinearAllocator.hpp  ParentAllocator.hpp  StackAllocator.hpp
DragonslayerEngine/Engine/include/Core/Containers/: Array.hpp  ArrayHelper.hpp  ContainerView.hpp  HashMap.hpp  HashMapHelper.hpp
DragonslayerEngine/Engine/include/Core/IO/: BufferedFile.hpp  File.hpp
DragonslayerEngine/Engine/include/ECS/: Component.hpp  Entity.hpp  EntityName.hpp  HierarchyDirectory.hpp  System.hpp  Vault.hpp
DragonslayerEngine/Engine/include/Editor/: ComponentMetadata.hpp  EditorCamera.hpp  EditorGlobals.hpp  ImGuiExtensions.hpp  ImGuiSetup.hpp  ImGuiState.hpp  TimeCapturesManager.hpp  TimeScope.hpp
DragonslayerEngine/Engine/include/Editor/Components/: HierarchySelection.hpp  TimeScopeTiming.hpp
DragonslayerEngine/Engine/include/Editor/Systems/: ECSDebugSystem.hpp  EditorCameraSystem.hpp  EditorStateSystem.hpp  EntityHierarchySystem.hpp  MemoryUsageSystem.hpp  OutputLogSystem.hpp  PhysicsDebugSystem.hpp  TimeCapturesSystem.hpp  TransformGizmosSystem.hpp
DragonslayerEngine/Engine/include/Math/: Mat2.hpp  Mat3.hpp  Mat4.hpp  MathAux.hpp  MathFwd.hpp  Quat.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
DragonslayerEngine/Engine/include/Physics/: PhysicsCommon.hpp
DragonslayerEngine/Engine/include/Physics/Components/: CharacterController.hpp  CollisionEvent.hpp  DynamicRigidBody.hpp  StaticRigidBody.hpp  TriggerEvent.hpp
DragonslayerEngine/Engine/include/Physics/Systems/: PhysicsSystem.hpp
DragonslayerEngine/Engine/include/Renderer/: BasicPrimitives.hpp  Camera.hpp  NRIWindowCreation.hpp  RendererCore.hpp  RenderingSystem.hpp  Shader.hpp  Texture.hpp
DragonslayerEngine/Engine/include/Renderer/Components/: PrimitiveRenderer.hpp
DragonslayerEngine/Engine/include/Renderer/FrameGraph/: FrameGraph.hpp  Handles.hpp
DragonslayerEngine/Engine/include/Renderer/Shaders/: Forward.fs.hlsl  Forward.vs.hlsl  ForwardDiscard.fs.hlsl  ForwardShadow.fs.hlsl  ForwardShadow.vs.hlsl  ForwardTransparent.fs.hlsl  GenerateDrawCommands.cs.hlsl  Shaders.cfg
DragonslayerEngine/Engine/include/Runtime/: Engine.hpp  Input.hpp
DragonslayerEngine/Engine/include/Runtime/Components/: PhysicsNPC.hpp  Transform.hpp
DragonslayerEngine/Engine/include/Runtime/Systems/: LogSystem.hpp  TimeSystem.hpp
DragonslayerEngine/Engine/libs/detex/: CMakeLists.txt
DragonslayerEngine/Engine/libs/physx/: BuildingPhysX.md
DragonslayerEngine/Engine/libs/physx/presets/: linux-clang-Dragonslayer.xml  linux-gcc-Dragonslayer.xml  win64-Dragonslayer.xml
DragonslayerEngine/Engine/src/Core/: EngineGlobals.cpp  Log.cpp  Window.cpp
DragonslayerEngine/Engine/src/Core/Allocators/: FreeListAllocator.cpp  LinearAllocator.cpp  StackAllocator.cpp
DragonslayerEngine/Engine/src/ECS/: Vault.cpp
DragonslayerEngine/Engine/src/Editor/: ComponentMetadata.cpp  EditorCamera.cpp  EditorGlobals.cpp  ImGuiExtensions.cpp  ImGuiState.cpp  TimeCapturesManager.cpp
DragonslayerEngine/Engine/src/Editor/Systems/: ECSDebugSystem.cpp  EditorCameraSystem.cpp  EditorStateSystem.cpp  EntityHierarchySystem.cpp  MemoryUsageSystem.cpp  OutputLogSystem.cpp  PhysicsDebugSystem.cpp  RendererDebugSystem.cpp  TimeCapturesSystem.cpp  TransformGizmosSystem.cpp
DragonslayerEngine/Engine/src/Math/: Mat2.cpp  Mat3.cpp  Mat4.cpp  MathAux.cpp  Quat.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
DragonslayerEngine/Engine/src/Physics/: DynamicRigidBody.cpp  Joints.cpp  PhysicsCommon.cpp
DragonslayerEngine/Engine/src/Physics/Systems/: PhysicsSystem.cpp
DragonslayerEngine/Engine/src/Renderer/: Camera.cpp  NRIWindowCreation.cpp  RenderingSystem.cpp
DragonslayerEngine/Engine/src/Renderer/FrameGraph/: FrameGraph.cpp
DragonslayerEngine/Engine/src/Runtime/: Engine.cpp  Input.cpp
DragonslayerEngine/Engine/src/Runtime/Systems/: LogSystem.cpp  TimeSystem.cpp
DragonslayerEngine/Launcher/: CMakeLists.txt  EngineSetup.hpp  Main.cpp  MainHotReload.cpp
DragonslayerEngine/Tests/: CMakeLists.txt
DragonslayerEngine/Tests/include/Framework/: TestFramework.hpp
DragonslayerEngine/Tests/src/: Main.cpp
DragonslayerEngine/Tests/src/Framework/: TestFramework.cpp
DragonslayerEngine/Tests/src/Tests/Allocators/: TestFreeListAllocator.cpp  TestInlineLinearAllocator.cpp  TestLinearAllocator.cpp
DragonslayerEngine/Tests/src/Tests/Containers/: TestArray.cpp  TestHashMap.cpp  TestInlineArray.cpp
DragonslayerEngine/Tests/src/Tests/ECS/: TestVault.cpp
DragonslayerEngine/Tests/src/Tests/Math/: TestMat2.cpp  TestMat3.cpp  TestMat4.cpp  TestQuat.cpp  TestVec2.cpp  TestVec3.cpp  TestVec4.cpp
DragonslayerEngine/Tests/src/Tests/Misc/: TestInlineString.cpp
Game/: CMakeLists.txt
Game/include/Game/: GameEntrypoint.hpp  GameExports.hpp  ModulesAndHandles.hpp  PhysicsCollisionGroups.hpp  StaticGameSettings.hpp
Game/include/Game/Components/: FollowEntity.hpp  GameState.hpp  Player.hpp  PlayerCamera.hpp  Projectile.hpp  WeaponBlueprint.hpp  WeaponEditor.hpp  WeaponEditorCamera.hpp  WeaponRuntime.hpp
Game/include/Game/Components/Enemies/: BigMouth.hpp  Enemy.hpp  Hover.hpp
Game/include/Game/Components/Handles/: ShootV1Handle.hpp  ShootV2Handle.hpp  ShootV3Handle.hpp  ShootV4Handle.hpp  (+1 more)
Game/include/Game/Systems/: EnemyAISystem.hpp  GameStateSystem.hpp  MapSystem.hpp  PlayerCameraSystem.hpp  PlayerSystem.hpp  WeaponEditorCameraSystem.hpp  WeaponEditorSystem.hpp  WeaponMotionSystem.hpp
Game/src/: GameEntrypoint.cpp
Game/src/Systems/: EnemyAISystem.cpp  GameStateSystem.cpp  MapSystem.cpp  PlayerCameraSystem.cpp  PlayerSystem.cpp  WeaponEditorCameraSystem.cpp  WeaponEditorSystem.cpp  WeaponMotionSystem.cpp
(+96 files in other folders)
